# critdd

./: .gitignore  ExemploF1.csv  main.py  pyproject.toml  setup.py
critdd/: diagram.py  stats.py  tikz.py  tikz_2d.py
critdd/tests/: readme.py  stats.py  tikz.py  two_d.py
